[metadata]
name = mcapi
description = mcapi
author = PortalHub, funyrom
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = mcapi
install_require =
    mcstatus
    docker
    mctools
    pillow

python_requires = >=3.8.1
package_dir =
    =.
zip_safe = no
